[package]
name = "crafthead_renderer"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "crafthead_renderer"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.30.0"
imageproc = { version = "0.23.0", default-features = false }

[dependencies.image]
# Make `image` more lightweight. We don't need every image format under the sun,
# just PNG.
version = "0.24.7"
default-features = false
features = ["png"]